--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <HEAD></HEAD>
 <BODY>
 <HR/>
-Final demo of Jenkins has been completed.
+Final demo of Jenkins has been completed. approved
 <HR/>
 </BODY>
 </HTML>
